--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/articledb
+spring.datasource.url=jdbc:postgresql://localhost/farma
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
