--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/farma
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.generate-ddl = true
 
 
 # Hibernate
@@ -15,6 +16,23 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
-
+#init data after every restart
+spring.datasource.initialization-mode=always
+## Hibernate Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+
+
+#####
+
+
+
+
+
+
+
+
+
+
+
